--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
             </p>
         </article>
 
-        <article class="footer-items" id="footer-grid" id="art-foot4">
+        <article class="footer-items" id="art-foot4">
+            <article id="footer-grid">
             <h3 class="underline" id="hfg">
                 Jobba hos oss
             </h3>
@@ -201,6 +202,7 @@
                     Skicka in ditt CV på <br> work.bread@gmail.com
                 </p>
                 <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+            </article>
         </article>
 
     </footer>
