--- a/menu.html
+++ b/menu.html
@@ -66,10 +66,12 @@
     </section>
     <div class="line"></div>
     <section id="vietnames-menu">
-        <h3 id="headline-viet">Vietnamesisk meny</h3>
-            <img id="img1-viet" src="img/regular/vietnames1.jpg" alt="Bild på pho">
-            <img id="img2-viet" src="img/regular/vietnames2.jpg" alt="Bild på springrolls">
-            <img id="img3-viet" src="img/regular/vietnames3.jpg" alt="Bild på bönor">
+        <h3 id="headline-viet">
+            Vietnamesisk meny
+        </h3>
+        <img id="img1-viet" src="img/regular/vietnames1.jpg" alt="Bild på pho">
+        <img id="img2-viet" src="img/regular/vietnames2.jpg" alt="Bild på springrolls">
+        <img id="img3-viet" src="img/regular/vietnames3.jpg" alt="Bild på bönor">
         <p id="we-offer" >Vi erbjuder
             <ul id="list1-viet">
                 <li>Banh Xeo</li>
@@ -110,6 +112,79 @@
             </p>
         </article>
         <div class="book-button">Beställ här</div>
+    </section>
+
+    <div class="line"></div>
+
+    <section id="japanese-menu">
+        <h3>
+            Japansk meny
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt impedit aliquid quos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolores reprehenderit sequi beatae, ipsam placeat eos repellendus unde mollitia, maxime quia ipsa?
+        </p>
+        <article id="japanese-flex">
+            <article>
+                <p id="head-japanese" class="underline">
+                    Vi erbjuder
+                </p>
+                <ul id="japanese-list">
+                    <li>Sushi</li>
+                    <li>Gyoza</li>
+                    <li>Sashimi</li>
+                    <li>Miso soppa</li>
+                    <li>Natto</li>
+                </ul>
+            </article>
+            <img src="img/regular/japanese-img.jpg" alt="Sashimi bild">
+        </article>
+    </section>
+
+    <div class="line"></div>
+
+    <section id="last-section-menu">
+        <h2>
+            Övrigt menyrelaterat
+        </h2>
+        <article class="squares-menu">
+            <h3>
+                Meny policy
+            </h3>
+            <p>
+                Lorem elit. Rem, voluptates. Vi, adipisicing elit. Lorem signus astum. Id, dolore similique sunt distinctio facere amet expedita veritatis, nam earum, laudantium doloribus numquam quia aliquam praesentium soluta non unde accusantium. Aspernatur!
+            </p>
+            <a href="">Läs mer</a>
+        </article>
+        <article class="squares-menu">
+            <h3>
+                Snabb bokning
+            </h3>
+            <div class="book-button-venue">
+                Beställ meny
+            </div>
+            <div class="book-button-venue">
+                Specialicera meny
+            </div>
+            <div class="book-button-venue">
+                Boka möte
+            </div>
+            <div class="book-button-venue">
+                Provsmaka meny
+            </div>
+        </article>
+
+        <article class="squares-menu">
+            <article id="last-square">
+                <h3 id="allergy-head">
+                    Allergihantering
+                </h3>
+                    <p id="text-allergy">
+                        Lorem ipsum dolor sit amet Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, laborum?
+                    </p>
+                    <img id="image-allergy" src="img/regular/menuicons.jpg" alt="Meny ikoner">
+            </article>
+        </article>
+
     </section>
 
 
