--- a/index.html
+++ b/index.html
@@ -120,18 +120,21 @@
 
         
             <Section id="section-office-meals">
-                <article>
-                    <h3 id="meals-parent">Välkommna till oss</h3>
-                </article>
-            
-                <h3 id="head-office">Huvudkontor</h3>
-                <article id="welcome-text">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit eaque autem deleniti a perspiciatis eveniet nisi sequi natus nam suscipit laboriosam debitis, aut consequatur pariatur, quas sit quo, cumque qui itaque nihil. Animi vitae, eum expedita autem eos quam laboriosam eligendi. Iusto, veritatis?
-                </p>
-                <img id="facade-img" src="img/regular/facade.jpg" alt="Facad">
+                <article id="part1">
+                    <article id="welcome-text">
+                        <h3 id="meals-parent">
+                            Välkommna till oss
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit eaque autem deleniti a perspiciatis eveniet nisi sequi natus nam suscipit laboriosam debitis, aut consequatur pariatur, quas sit quo, cumque qui itaque nihil. Animi vitae, eum expedita autem eos quam laboriosam eligendi. Iusto, veritatis?
+                        </p>
+                        <img id="facade-img" src="img/regular/facade.jpg" alt="Facad">
+                    </article>
                 </article>
                 <article id="info">
+                    <h3 id="head-office">
+                        Huvudkontor
+                    </h3>
                     <img id="image-place" src="img/regular/here.jpg" alt="Karta">
                     <p id="copyright">*Bild tagen från google maps*</p>
                     <h4 id="contact-info"><br> Nå oss på: <br><br></h4>
@@ -197,11 +200,11 @@
             </p>
         </article>
 
-        <article class="footer-items" id="art-foot4">
+        <article id="art-foot4" class="footer-items">
             <article id="footer-grid">
-            <h3 class="underline" id="hfg">
-                Jobba hos oss
-            </h3>
+                <h3 class="underline" id="hfg">
+                    Jobba hos oss
+                </h3>
                 <p id="tfg">
                     Skicka in ditt CV på <br> work.bread@gmail.com
                 </p>
