--- a/menu.html
+++ b/menu.html
@@ -30,116 +30,94 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.</p>
     </section>
     <div class="line"></div>
-    <section id="italien-section">
-        <img id="pi" src="img/regular/italian-menu.jpg" alt="Italian buffé">
-        <h3 id="it">Italiensk meny</h3>
-        <p id="vi">Vi erbjuder:</p>
-        <ul id="li">
-            <li>Pastor</li>
-            <li>Pizzor</li>
-            <li>Chark brickor</li>
-            <li>Gelato</li>
-        </ul>
-        <p id="pit">
-            Lorem ipsum dolor, adipisicing elit. Corrupti, eum tenetur excepturi expedita consequatur dolor optio possimus minus necessitatibus at officia odio?
-        </p>
-        <div class="book-button">
-            Beställ här
-        </div>
-    </section>
-    <div class="line"></div>
-    <section id="french-menu">
-        <h3 id="fr">Fransk meny</h3>
-        <img id="fm" src="img/regular/french-menu.jpg" alt="Picture of snails">
-        <p id="ft">Lorem ipsum r sit amet consectetur adipisicing. ipsum dolor sit amet consectetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
-        <p id="ve">Vi erbjuder:</p>
-        <ul id="fl">
-            <li>Sniglar</li>
-            <li>Croque monsieur</li>
-            <li>Skaldjursplatå</li>
-            <li>Löksoppa</li>
-            <li>Patesserie</li>
-        </ul> 
-        <div class="book-button">
-            Beställ här
-        </div>
-    </section>
-    <div class="line"></div>
-    <section id="vietnames-menu">
-        <h3 id="headline-viet">
-            Vietnamesisk meny
-        </h3>
-        <img id="img1-viet" src="img/regular/vietnames1.jpg" alt="Bild på pho">
-        <img id="img2-viet" src="img/regular/vietnames2.jpg" alt="Bild på springrolls">
-        <img id="img3-viet" src="img/regular/vietnames3.jpg" alt="Bild på bönor">
-        <p id="we-offer" >Vi erbjuder
-            <ul id="list1-viet">
-                <li>Banh Xeo</li>
-                <li>Bun Cha</li>
-                <li>Mi Quang</li>
+    <section id="grid-menu">
+        <section id="italien-section" class="menu-looks">
+            <img id="pi" src="img/regular/italian-menu.jpg" alt="Italian buffé">
+            <h3 id="it">Italiensk meny</h3>
+            <p id="vi">Vi erbjuder:</p>
+            <ul id="li">
+                <li>Pastor</li>
+                <li>Pizzor</li>
+                <li>Chark brickor</li>
+                <li>Gelato</li>
             </ul>
-            <ul id="list2-viet">
-                <li>Pho</li>
-                <li>Banh Mi</li>
-                <li>Springrolls</li>
-            </ul>
+            <p id="pit">
+                Lorem ipsum dolor, adipisicing elit. Corrupti, eum tenetur excepturi expedita consequatur dolor optio possimus minus necessitatibus at officia odio?
             </p>
-    </section>
-    <div class="book-button">
-        Beställ här
-    </div>
-    <div class="line"></div>
+            <div class="book-button">
+                Beställ här
+            </div>
+        </section>
+        <div class="disapear-line"></div>
+        <section id="french-menu" class="menu-looks">
+            <h3 id="fr">Fransk meny</h3>
+            <img id="fm" src="img/regular/french-menu.jpg" alt="Picture of snails">
+            <p id="ft">Lorem ipsum r sit amet consectetur adipisicing. ipsum dolor sit amet consectetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
+            <p id="ve">Vi erbjuder:</p>
+            <ul id="fl">
+                <li>Sniglar</li>
+                <li>Croque monsieur</li>
+                <li>Skaldjursplatå</li>
+                <li>Löksoppa</li>
+                <li>Patesserie</li>
+            </ul> 
+            <div class="book-button">
+                Beställ här
+            </div>
+        </section>
+        <div class="disapear-line"></div>
 
-    <section id="mexican-section">
-        <h3>
-            Mexikansk meny
-        </h3>
-        <img src="img/regular/mexicanfood.jpg" alt="Tacos på bild">
-        <article id="inner-mexican-section">
-            <article id="inner-inner-mexican">
-                <p class="underline">
-                    Vi erbjuder
+        <section id="mexican-section" class="menu-looks">
+            <h3>
+                Mexikansk meny
+            </h3>
+            <img src="img/regular/mexicanfood.jpg" alt="Tacos på bild">
+            <article id="inner-mexican-section">
+                <article id="inner-inner-mexican">
+                    <p class="underline">
+                        Vi erbjuder
+                    <p>
+                    <ul id="mexican-list">
+                        <li>Tacos</li>
+                        <li>Enchiladas</li>
+                        <li>Elote</li>
+                        <li>Fajitas</li>
+                    </ul>
+                </article>
                 <p>
-                <ul id="mexican-list">
-                    <li>Tacos</li>
-                    <li>Enchiladas</li>
-                    <li>Elote</li>
-                    <li>Fajitas</li>
-                </ul>
-            </article>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quas voluptatum aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur amet dicta dignissimos.
-            </p>
-        </article>
-        <div class="book-button">Beställ här</div>
-    </section>
-
-    <div class="line"></div>
-
-    <section id="japanese-menu">
-        <h3>
-            Japansk meny
-        </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt impedit aliquid quos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolores reprehenderit sequi beatae, ipsam placeat eos repellendus unde mollitia, maxime quia ipsa?
-        </p>
-        <article id="japanese-flex">
-            <article>
-                <p id="head-japanese" class="underline">
-                    Vi erbjuder
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quas voluptatum aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur amet dicta dignissimos.
                 </p>
-                <ul id="japanese-list">
-                    <li>Sushi</li>
-                    <li>Gyoza</li>
-                    <li>Sashimi</li>
-                    <li>Miso soppa</li>
-                    <li>Natto</li>
-                </ul>
             </article>
-            <img src="img/regular/japanese-img.jpg" alt="Sashimi bild">
-        </article>
-    </section>
+            <div class="book-button">Beställ här</div>
+        </section>
 
+        <div class="disapear-line"></div>
+
+        <section id="japanese-menu" class="menu-looks">
+            <h3>
+                Japansk meny
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt impedit aliquid quos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolores reprehenderit sequi beatae, ipsam placeat eos repellendus unde mollitia, maxime quia ipsa?
+            </p>
+            <article id="japanese-flex">
+                <article>
+                    <p id="head-japanese" class="underline">
+                        Vi erbjuder
+                    </p>
+                    <ul id="japanese-list">
+                        <li>Sushi</li>
+                        <li>Gyoza</li>
+                        <li>Sashimi</li>
+                        <li>Miso soppa</li>
+                        <li>Natto</li>
+                    </ul>
+                </article>
+                <img src="img/regular/japanese-img.jpg" alt="Sashimi bild">
+            </article>
+            <div class="book-button">Beställ här</div>
+        </section>
+    </section>
     <div class="line"></div>
 
     <section id="last-section-menu">
@@ -186,13 +164,6 @@
         </article>
 
     </section>
-
-
-
-
-
-
-
 
     <div class="line"></div>
 
