--- a/menu.html
+++ b/menu.html
@@ -26,8 +26,14 @@
     </header>
 
     <section class="starting-section">
-        <h3>Menypaket</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.</p>
+        <article id="width-menu">
+            <h3>
+                Menypaket
+            </h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.
+            </p>
+        </article>
     </section>
     <div class="line"></div>
     <section id="grid-menu">
@@ -121,7 +127,7 @@
     <div class="line"></div>
 
     <section id="last-section-menu">
-        <h2>
+        <h2 id="disapear-headline">
             Övrigt menyrelaterat
         </h2>
         <article class="squares-menu">
@@ -187,7 +193,7 @@
             </p>
         </article>
 
-        <article- class="footer-items">
+        <article class="footer-items" id="art-foot3">
             <h3 class="underline">
                 Jobbsituation
             </h3>
@@ -196,16 +202,19 @@
             </p>
         </article>
 
-        <article class="footer-items" id="footer-grid">
-            <h3 class="underline" id="hfg">
-                Jobba hos oss
-            </h3>
+        <article id="art-foot4" class="footer-items">
+            <article id="footer-grid">
+                <h3 class="underline" id="hfg">
+                    Jobba hos oss
+                </h3>
                 <p id="tfg">
                     Skicka in ditt CV på <br> work.bread@gmail.com
                 </p>
                 <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+            </article>
         </article>
 
+        
     </footer>
     <script src="js/script.js"></script>
 </body>
