--- a/events.html
+++ b/events.html
@@ -164,7 +164,7 @@
             </p>
         </article>
 
-        <article- class="footer-items">
+        <article class="footer-items" id="art-foot3">
             <h3 class="underline">
                 Jobbsituation
             </h3>
@@ -173,16 +173,19 @@
             </p>
         </article>
 
-        <article class="footer-items" id="footer-grid">
-            <h3 class="underline" id="hfg">
-                Jobba hos oss
-            </h3>
+        <article id="art-foot4" class="footer-items">
+            <article id="footer-grid">
+                <h3 class="underline" id="hfg">
+                    Jobba hos oss
+                </h3>
                 <p id="tfg">
                     Skicka in ditt CV på <br> work.bread@gmail.com
                 </p>
                 <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
+            </article>
         </article>
 
+        
     </footer>
     <script src="js/script.js"></script>
 </body>
