--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </p>
                     <img src="img/regular/taylor.jpg" alt="Bild på kock">
             </article>
-            <div class="disapear-line" class="line"></div>
+            <div class="disapear-line"></div>
             <article id="allergy-article">
                 <h3 id="he">
                     Allergihantering
@@ -191,7 +191,7 @@
             </p>
         </article>
 
-        <article- class="footer-items" id="art-foot3">
+        <article class="footer-items" id="art-foot3">
             <h3 class="underline">
                 Jobbsituation
             </h3>
@@ -211,6 +211,8 @@
                 <div id="logo"> <img src="misc/logo-edited4.png" alt="Logga"></div>
             </article>
         </article>
+
+        
 
     </footer>
 
