real final push

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <article class="footer-items" id="art-foot1">
             <h3 class="underline">
-                LA lo so
+                Besök oss
             </h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -184,7 +184,7 @@
         
         <article class="footer-items" id="art-foot2">
             <h3 class="underline">
-                Rikshögstag
+                Beställ
             </h3>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing.
@@ -193,7 +193,7 @@
 
         <article class="footer-items" id="art-foot3">
             <h3 class="underline">
-                Jobbsituation
+                Arbetsförhållanden
             </h3>
             <p>
                 Lorem ipsum dolor sit amet.
