--- a/menu.html
+++ b/menu.html
@@ -177,7 +177,7 @@
 
         <article class="footer-items">
             <h3 class="underline">
-                LA lo so
+                Besök oss
             </h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -186,7 +186,7 @@
         
         <article class="footer-items">
             <h3 class="underline">
-                Rikshögstag
+                Beställ
             </h3>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing.
@@ -195,7 +195,7 @@
 
         <article class="footer-items" id="art-foot3">
             <h3 class="underline">
-                Jobbsituation
+                Arbetsförhållanden
             </h3>
             <p>
                 Lorem ipsum dolor sit amet.
