--- a/events.html
+++ b/events.html
@@ -148,7 +148,7 @@
 
         <article class="footer-items">
             <h3 class="underline">
-                LA lo so
+                Besök oss
             </h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -157,7 +157,7 @@
         
         <article class="footer-items">
             <h3 class="underline">
-                Rikshögstag
+                Beställ
             </h3>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing.
@@ -166,7 +166,7 @@
 
         <article class="footer-items" id="art-foot3">
             <h3 class="underline">
-                Jobbsituation
+                Arbetsförhållanden
             </h3>
             <p>
                 Lorem ipsum dolor sit amet.
