--- a/premises.html
+++ b/premises.html
@@ -158,7 +158,7 @@
 
         <article class="footer-items">
             <h3 class="underline">
-                LA lo so
+                Besök oss
             </h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -167,7 +167,7 @@
         
         <article class="footer-items">
             <h3 class="underline">
-                Rikshögstag
+                Beställ
             </h3>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing.
@@ -176,7 +176,7 @@
 
         <article class="footer-items" id="art-foot3">
             <h3 class="underline">
-                Jobbsituation
+                Arbetsförhållanden
             </h3>
             <p>
                 Lorem ipsum dolor sit amet.
