--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
         <div id="stopping-img-section-again">
-            <article id="square-text">
+            <article class="square-text">
                 <h3>
                     Öppettider
                 </h3>
@@ -101,7 +101,7 @@
         </section>
         <div class="disapear-line"></div>
         <section id="stopping-img-section">
-            <article id="square-text">
+            <article class="square-text">
                 <h3>
                     Öppettider
                 </h3>
