--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Catering till alla tillställningar
                 </h2>
                 <p id="intro-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nobis vel dignissimos temporibus. Obcaecati numquam praesentium, modi suntary mi accusantium cumque!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati cumque!
                 </p>
             </article>
         </section>
@@ -144,29 +144,33 @@
                 </article>
             </Section>
 
-            <div class="disapear-line"></div>
+            
+    </section>
 
-            <section id="meals-grid">
-                <h2 id="mag">
-                    Måltider
-                </h2>
-                <img id="sun-rise" src="misc/summery-of-sun-rises-smaller.png" alt="Solen">
-                <h3 id="lmp21" class="meals">
-                    Frukost
-                </h3>
-                <h3 id="lmp2" class="meals">
-                    Brunch
-                </h3>
-                <h3 id="lmp3" class="meals">
-                    Lunch
-                </h3>
-                <h3 id="lmp4" class="meals">
-                    Afternoon tea
-                </h3>
-                <h3 id="lmp5" class="meals">
-                    Middag
-                </h3>
-            </section>
+    <div class="line"></div>
+
+    <section id="meals-grid-parent">
+        <section id="meals-grid">
+            <h2 id="mag">
+                Måltider
+            </h2>
+            <img id="sun-rise" src="misc/summery-of-sun-rises-smaller.png" alt="Solen">
+            <h3 id="lmp21" class="meals">
+                Frukost
+            </h3>
+            <h3 id="lmp2" class="meals">
+                Brunch
+            </h3>
+            <h3 id="lmp3" class="meals">
+                Lunch
+            </h3>
+            <h3 id="lmp4" class="meals">
+                Afternoon tea
+            </h3>
+            <h3 id="lmp5" class="meals">
+                Middag
+            </h3>
+        </section>
     </section>
 
     <div class="line"></div>
