--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
     <div class="line"></div>
     <section id="grid-menu">
         <section id="italien-section" class="menu-looks">
-            <img id="pi" src="img/regular/italian-menu.jpg" alt="Italian buffé">
+            <img id="pi" src="img/regular/italian-menu2.jpg" alt="Italian buffé">
             <h3 id="it">Italiensk meny</h3>
             <p id="vi">Vi erbjuder:</p>
             <ul id="li">
@@ -57,7 +57,7 @@
         <div class="disapear-line"></div>
         <section id="french-menu" class="menu-looks">
             <h3 id="fr">Fransk meny</h3>
-            <img id="fm" src="img/regular/french-menu.jpg" alt="Picture of snails">
+            <img id="fm" src="img/regular/french-menu2.jpg" alt="Picture of snails">
             <p id="ft">Lorem ipsum r sit amet consectetur adipisicing. ipsum dolor sit amet consectetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
             <p id="ve">Vi erbjuder:</p>
             <ul id="fl">
@@ -77,7 +77,7 @@
             <h3>
                 Mexikansk meny
             </h3>
-            <img src="img/regular/mexicanfood.jpg" alt="Tacos på bild">
+            <img src="img/regular/mexicanfood2.jpg" alt="Tacos på bild">
             <article id="inner-mexican-section">
                 <article id="inner-inner-mexican">
                     <p class="underline">
@@ -119,7 +119,7 @@
                         <li>Natto</li>
                     </ul>
                 </article>
-                <img src="img/regular/japanese-img.jpg" alt="Sashimi bild">
+                <img src="img/regular/japanese-img2.jpg" alt="Sashimi bild">
             </article>
             <div class="book-button">Beställ här</div>
         </section>
@@ -135,7 +135,7 @@
                 Meny policy
             </h3>
             <p>
-                Lorem elit. Rem, voluptates. Vi, adipisicing elit. Lorem signus astum. Id, dolore similique sunt distinctio facere amet expedita veritatis, nam earum, laudantium doloribus numquam quia aliquam praesentium soluta non unde accusantium. Aspernatur!
+                Lorem elit. Rem, voluptates. Vi, adipisicing elit. Lorem signus astum. Id,  numquam quia aliquam praesentium soluta non unde accusantium. Aspernatur!
             </p>
             <a href="">
                 Läs mer
@@ -165,7 +165,7 @@
                     Allergihantering
                 </h3>
                     <p id="text-allergy">
-                        Lorem ipsum dolor sit amet Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, laborum?
+                        Lorem ipsum dolor sit amet elit. Vero, laborum?
                     </p>
                     <img id="image-allergy" src="img/regular/menuicons.jpg" alt="Meny ikoner">
             </article>
