--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
                 Menypaket
             </h3>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, nobis placeat reiciendis quasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquaquasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.
             </p>
         </article>
     </section>
@@ -48,7 +48,7 @@
                 <li>Gelato</li>
             </ul>
             <p id="pit">
-                Lorem ipsum dolor, adipisicing elit. Corrupti, eum tenetur excepturi expedita consequatur dolor optio possimus minus necessitatibus at officia odio?
+                Lorem ipsum dolor, adipisicing elit. Corrupti, euma consequatur dolor optio possimus minus necessitatibus at officia odio?
             </p>
             <div class="book-button">
                 Beställ här
@@ -58,7 +58,7 @@
         <section id="french-menu" class="menu-looks">
             <h3 id="fr">Fransk meny</h3>
             <img id="fm" src="img/regular/french-menu2.jpg" alt="Picture of snails">
-            <p id="ft">Lorem ipsum r sit amet consectetur adipisicing. ipsum dolor sit amet consectetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
+            <p id="ft">Lorem ipsum r sit amet consctetg elit. Quaerat, Lorem, ipsum dolor sit aadipisicing elit. Blanditiis. s corrupti ab eveniet! In.</p>
             <p id="ve">Vi erbjuder:</p>
             <ul id="fl">
                 <li>Sniglar</li>
@@ -91,7 +91,7 @@
                     </ul>
                 </article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quas voluptatum aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur amet dicta dignissimos.
+                    Lorem ipsum dolor sit amet consectetur adipisiectetur . Aspernatur amet dicta dignissimos.
                 </p>
             </article>
             <div class="book-button">Beställ här</div>
@@ -104,7 +104,7 @@
                 Japansk meny
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt impedit aliquid quos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolores reprehenderit sequi beatae, ipsam placeat eos repellendus unde mollitia, maxime quia ipsa?
+                Lorem ipsum dolor sit amet consequos. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolores reprehenderit sequi beatae, ipsam placeat eos repellendus unde mollitia, maxime quia ipsa?
             </p>
             <article id="japanese-flex">
                 <article>
