--- a/events.html
+++ b/events.html
@@ -39,7 +39,7 @@
             </h3>
             <img id="wed-img" src="img/regular/wedding.jpg" alt="Bild av bröllop">
             <p id="wed-txt">
-                Lorem ipsum dolor laboriosam odio vitae asperiores, la vie da local mosi dicta dignissimos? <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magnam accusantium tenetur.
+                Lorem ipsum dolor laboriosam i dicta dignissimos? <br> <br> Lorem ipsum dolor sit amet consecte accusantium tenetur.
             </p>
         </section>
 
@@ -51,7 +51,7 @@
                     Begravning
                 </h3>
                 <p>
-                    Lorem ipsum dolo adipisicing elit. Iusto molestias tempora autem atque magnam nostrum eligendi at fugit adipisci optio.
+                    Lorem ipsum dolo adipisicing elit. Iusto molestias tempora autem ndi at fugit adipisci optio.
                 </p>
                 <img id="short-church" src="img/regular/funeral-short.jpg" alt="bild på kyrka">
             </article>
@@ -84,8 +84,8 @@
                 <h3 id="head-party">
                     Fest
                 </h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis minus repellendus expedita, enim eveniet fuga itaque excepturi nostrum sit placeat velit magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam libero sansin animi! <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem natus culpa fugiat.
+                <p id="party-text">
+                    Lorem ipsum, dolor sit amet cxpedita, enim eveniet fuga itaque excepturi nostrum sit placeat velit magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsam libero sansin animi! <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem natus culpa fugiat.
                 </p>
             </article>
             <img id="img-party" src="img/regular/party.jpg" alt="Bild på fest">
@@ -135,9 +135,9 @@
             </article>
             <article id="wine-img">
             </article>
-            <article>
-                <img src="img/regular/waiters-img-1.jpg" alt="Bild på drink">
-                <img src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
+            <article id="flex-pictures">
+                <img id="img1-smaller" src="img/regular/waiters-img-1.jpg" alt="Bild på drink">
+                <img id="img2-smaller" src="img/regular/waiters-img-2.jpg" alt="Bild på mat">
             </article>
         </section>
     </section>
