--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
             <h3>
                 Menypaket
             </h3>
-            <p>
+            <p id="left-mobil">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquaquasi maxime quibusdam officia expedita, beatae explicabo, porro molestiae rem facere aperiam enim corporis cupiditate dignissimos. Possimus, magni. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore porro. Voluptate sunt natus odit corrupti blanditiis officia, reiciendis molestias.
             </p>
         </article>
