--- a/premises.html
+++ b/premises.html
@@ -33,7 +33,7 @@
             <h4 id="margin-under">
                 Vi på Bread & Butter har lokaler för uthyrning
             </h4>
-            <p>
+            <p id="not-left">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quisquam atque sit adipisci. Consequuntur molestias sapiente atque animi nobis fugit aperiam! Autem eligendi, at doloribus ducimus voluptatum eos rem recusandae accusantium eaque qui magnam placeat quod mollitia.
             </p>
     
@@ -58,7 +58,7 @@
                 </article>
                 <article class="text-button">
                     <div class="book-button-venue">Boka</div>
-                    <p>
+                    <p class="venue-left">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
                     </p>
                 </article>
@@ -74,7 +74,7 @@
                 </article>
                 <article class="text-button">
                     <div class="book-button-venue">Boka</div>
-                    <p>
+                    <p class="venue-left">
                         Lorem ipsum dolor sit, adipisicing elit flubbis blubb. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing sit amet.
                     </p>
                 </article>
@@ -89,7 +89,7 @@
                     </article>
                     <article class="text-button">
                         <div class="book-button-venue">Boka</div>
-                        <p>
+                        <p class="venue-left">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
                         </p>
                     </article>
@@ -109,7 +109,7 @@
                     </article>
                     <article class="text-button">
                         <div class="book-button-venue">Boka</div>
-                        <p>
+                        <p class="venue-left">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
                         </p>
                     </article>
@@ -125,7 +125,7 @@
                     </article>
                     <article class="text-button">
                         <div class="book-button-venue">Boka</div>
-                        <p>
+                        <p class="venue-left">
                             Lorem ipsum dolor sit amet consectetur slubbi dubbi glo ki, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
                         </p>
                     </article>
@@ -141,7 +141,7 @@
                     </article>
                     <article class="text-button">
                         <div class="book-button-venue">Boka</div>
-                        <p>
+                        <p class="venue-left">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis maiores officiis earum. Lorem ipsum dolor sit amet consectetur adipisicing.
                         </p>
                     </article>
