--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                     <p id="tayler-p-tag">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque repudiandae expedita at sequi, qui animi, dolorum dignissimos placeat ut quae ratione saepe non sed voluptatem dolore cum impedit minima.
                     </p>
-                    <img src="img/regular/taylor.jpg" alt="Bild på kock">
+                    <img class="img-bigger" src="img/regular/taylor.jpg" alt="Bild på kock">
             </article>
             <div class="disapear-line"></div>
             <article id="allergy-article">
                 <h3 id="he">
                     Allergihantering
                 </h3>
-                <img src="img/regular/allergy.jpg" alt="Bild på korn">
+                <img class="img-bigger" src="img/regular/allergy.jpg" alt="Bild på korn">
                 <p id="te">
                     Lorem ipsum dolor sit amet consecter, elit. Sequi hic minus praesentium error non porro deleniti quisquam if veritatis ad blanditiis corporis modi, aliquid pariatur! Enim aliquid commodi ducimus quibusdam.
                 </p>
