--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
         <div class="disapear-line"></div>
 
         <section id="japanese-menu" class="menu-looks">
-            <h3>
+            <h3 id="move-up">
                 Japansk meny
             </h3>
             <p>
