--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
 
         <section id="flex-funeral" class="desktop-event-flex">
             <article id="art-funeral">
-                <h3>
+                <h3 id="funeral-head">
                     Begravning
                 </h3>
                 <p>
@@ -62,14 +62,14 @@
 
         <section class="desktop-event-flex" id="flex-dop">
             <article id="dop-1">
-                <h3 id="he-dop">
-                    Dop
-                </h3>
                 <img id="long-dop-img" src="img/regular/dop-long.jpg" alt="Bild på dop">
             </article>
             <article id="dop-2">
+                <h3 id="he-dop">
+                    Dop
+                </h3>
                 <p id="dop-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet. Vero neque aliquam doloremque debitis culpa odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet. Vero neque aliquam dolorem debitis culpa odit.
                 </p>
                 <img id="short-dop-img" src="img/regular/dop-short.jpg" alt="Bild på bebis">
             </article>
@@ -95,9 +95,9 @@
 
         <section id="loan-section" class="desktop-event-flex2">
             <article id="loan-art-1">
-                <h2>
+                <h3>
                     Uthyrning <br><br>
-                </h2>
+                </h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, in hic deleniti nihil sunt illo culpa excepturi non laborum explicabo numquam quae, porro, fugit itaque consequuntur dignissimos dolorum nam quas!
                 </p>
@@ -123,10 +123,10 @@
 
         <section id="flex-waiters" class="desktop-event-flex2">
             <article>
-                <h3>
+                <h3 id="head-up-1">
                     Personal och servitörer <br><br>
                 </h3>
-                <p>
+                <p id="party-txt-1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, fuga! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint molestiae a eveniet?
                 </p>
                 <p>
